vdpau: add prime support at connection setup

This just ports the code from the mesa glx setup into vdpau,
this just picks the correct driver to load on the client side,

at least for gallium/vl code we need another similiar change
inside the driver code to pick the correct drm device.

Signed-off-by: Dave Airlie <airlied@redhat.com>
Tested-by: Martin Peres <martin.peres@ensi-bourges.fr>
Tested-by: Hohahiu <rakothedin@gmail.com>
Reviewed-by: Aaron Plattner <aplattner@nvidia.com>
Signed-off-by: Aaron Plattner <aplattner@nvidia.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=67283